deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gab-app-deployment
  labels:
    app: gab-app
    environment: "dev"  # Default value, can be set in the pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gab-app
  template:
    metadata:
      labels:
        app: gab-app
        environment: "dev"  # Default value, can be set in the pipeline
    spec:
      containers:
        - name: gab-app-container
          image: ""  # Placeholder for image
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gab-app-secret
