manifest-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-service
  namespace: scoutflo-namespace
  labels:
    app: gab-app
    environment: "dev"  # Default value, can be set in the pipeline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gab-app
  template:
    metadata:
      labels:
        app: gab-app
        environment: "dev"  # Default value, can be set in the pipeline
    spec:
      containers:
        - name: gab-app-container
          image: ""  # Placeholder for image
          ports:
            - containerPort: 80
          resources:  # To define the resource consumption limits
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: gab-app-secret

----------------------------------------------------------------------------------------------------------------------------------------        

apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: scoutflo-namespace
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ipv6: "false"  # Ensures IPv6 is disabled
  labels:
    app: my-service
    environment: "dev"
spec:
  type: ClusterIP  # Exposes the service via an external load balancer (for public access)
  selector:
    app: gab-app
  ports:
    - protocol: TCP
      port: 80         # External port for the service
      targetPort: 3000   ## The port where the container is running


---------------------------------------------------------------------------------------------------------------------------------------- 

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-service
  namespace: scoutflo-namespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: my-service.scoutflo.agency
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
  tls:
  - hosts:
    - my-service.scoutflo.agency
    secretName: scoutflo-agency-wildcard-tls
